Stop scrolling verticaly on slider swipe on mobile

--- a/src/containers/Slider/slider.scss
+++ b/src/containers/Slider/slider.scss
@@ -113,8 +113,8 @@ $height: 28vh;
         height: 100%;
         border: 0;
         img {
-          width: 130px;
-          height: 100px;
+          width: 140px;
+          height: 110px;
         }
 
         &:hover img {
