--- a/src/index.scss
+++ b/src/index.scss
@@ -110,6 +110,9 @@ body {
   line-height: 1;
   background-color: #f3f3f1;
 }
+body.prevent-scroll {
+  overflow: hidden;
+}
 ol,
 ul {
   list-style: none;
